creating argument classes for parameterized methods UserServiceTest